# fpas

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 64258b2fc72e_.py  b339184edc62_.py
fpas/: __init__.py  main.py
fpas/api/: deps.py
fpas/api/routers/: api.py  items.py
fpas/core/: conf.py
fpas/crud/: __init__.py  crud_base.py  crud_item.py
fpas/db/: base.py  base_model_class.py  session.py  utils.py
fpas/models/: item.py
fpas/schemas/: __init__.py  item.py
tests/: conftest.py
tests/test_api/: test_deps.py  test_items.py  test_routers.py
tests/test_crud/: test_crud_item.py
tests/test_db/: test_utils.py
