[tool.poetry]
name = "fpas"
version = "0.1.0"
description = "Fastapi plus Async SQLAlchemy example app."
authors = ["Martin Hanzely <info@hanzelymartin.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.25"}
alembic = "^1.7.3"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"
asgi-lifespan = "^1.0.1"
coverage = "^5.5"
flake8 = "^3.9.2"
mypy = "^0.910"
sqlalchemy2-stubs = "^0.0.2-alpha.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
